--- a/PokeDemo/View/Components/ContainerTextFields/CheckContainerTextField.xib
+++ b/PokeDemo/View/Components/ContainerTextFields/CheckContainerTextField.xib
@@ -1,38 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CheckContainerTextField" customModule="PokeDemo" customModuleProvider="target">
+            <connections>
+                <outlet property="checkImage" destination="eQJ-sI-GZj" id="r5J-oh-eTC"/>
+                <outlet property="containerView" destination="vew-Qg-EZa" id="tcO-9y-FUO"/>
+                <outlet property="textField" destination="OZK-lq-lCH" id="NAJ-d2-tmP"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="CheckContainerTextField" customModule="PokeDemo" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+        <view contentMode="scaleToFill" id="iN0-l3-epB">
+            <rect key="frame" x="0.0" y="0.0" width="414" height="132"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vew-Qg-EZa">
-                    <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="132"/>
                     <subviews>
                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="OZK-lq-lCH">
-                            <rect key="frame" x="5" y="5" width="374" height="808"/>
+                            <rect key="frame" x="5" y="5" width="374" height="122"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits"/>
-                            <connections>
-                                <outlet property="delegate" destination="iN0-l3-epB" id="jz8-vS-tg8"/>
-                            </connections>
                         </textField>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="eQJ-sI-GZj">
-                            <rect key="frame" x="384" y="396.5" width="25" height="25"/>
+                            <rect key="frame" x="384" y="53.5" width="25" height="25"/>
                             <constraints>
                                 <constraint firstAttribute="width" secondItem="eQJ-sI-GZj" secondAttribute="height" multiplier="1:1" id="fwT-qk-HeS"/>
                                 <constraint firstAttribute="width" constant="25" id="wAM-Jt-1q0"/>
                             </constraints>
                         </imageView>
                     </subviews>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                     <constraints>
                         <constraint firstAttribute="trailing" secondItem="eQJ-sI-GZj" secondAttribute="trailing" constant="5" id="5bd-pm-1rl"/>
                         <constraint firstItem="OZK-lq-lCH" firstAttribute="centerY" secondItem="vew-Qg-EZa" secondAttribute="centerY" id="9Jj-Dn-S6i"/>
@@ -46,17 +47,14 @@
             </subviews>
             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
             <constraints>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="vew-Qg-EZa" secondAttribute="trailing" id="BDn-4c-S7e"/>
-                <constraint firstItem="vew-Qg-EZa" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="Hza-pg-OaW"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="vew-Qg-EZa" secondAttribute="bottom" id="KBp-sT-27K"/>
-                <constraint firstItem="vew-Qg-EZa" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="Xi0-8P-hEC"/>
+                <constraint firstAttribute="trailing" secondItem="vew-Qg-EZa" secondAttribute="trailing" id="BDn-4c-S7e"/>
+                <constraint firstItem="vew-Qg-EZa" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="Hza-pg-OaW"/>
+                <constraint firstAttribute="bottom" secondItem="vew-Qg-EZa" secondAttribute="bottom" id="MLG-jA-ujG"/>
+                <constraint firstItem="vew-Qg-EZa" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="Xi0-8P-hEC"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <connections>
-                <outlet property="checkImage" destination="eQJ-sI-GZj" id="i2E-77-bxL"/>
-                <outlet property="textField" destination="OZK-lq-lCH" id="wxJ-mR-I0u"/>
-            </connections>
-            <point key="canvasLocation" x="139" y="153"/>
+            <nil key="simulatedTopBarMetrics"/>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <point key="canvasLocation" x="146.37681159420291" y="189.50892857142856"/>
         </view>
     </objects>
 </document>
