--- a/PokeDemo/View/Login/Base.lproj/Login.storyboard
+++ b/PokeDemo/View/Login/Base.lproj/Login.storyboard
@@ -7,10 +7,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Login View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="PokeDemo" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="LoginViewController" customModule="PokeDemo" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -21,18 +21,34 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0kY-nH-CFY">
                                         <rect key="frame" x="0.0" y="-39" width="414" height="896"/>
                                         <subviews>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bFy-PH-il1" customClass="CheckContainerTextField" customModule="PokeDemo" customModuleProvider="target">
-                                                <rect key="frame" x="10" y="425.5" width="394" height="45"/>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bFy-PH-il1" customClass="ContainerTextField" customModule="PokeDemo" customModuleProvider="target">
+                                                <rect key="frame" x="20" y="358.5" width="374" height="45"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="45" id="wgh-AM-x9z"/>
+                                                </constraints>
+                                            </view>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LGt-QD-s5E" customClass="ContainerTextField" customModule="PokeDemo" customModuleProvider="target">
+                                                <rect key="frame" x="20" y="423.5" width="374" height="45"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="45" id="7Wk-0Y-3Ak"/>
                                                 </constraints>
                                             </view>
                                         </subviews>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                         <constraints>
-                                            <constraint firstItem="bFy-PH-il1" firstAttribute="leading" secondItem="0kY-nH-CFY" secondAttribute="leading" constant="10" id="4F6-wL-1yT"/>
-                                            <constraint firstItem="bFy-PH-il1" firstAttribute="centerY" secondItem="0kY-nH-CFY" secondAttribute="centerY" id="KmF-hW-Xh6"/>
-                                            <constraint firstAttribute="trailing" secondItem="bFy-PH-il1" secondAttribute="trailing" constant="10" id="Trf-ua-bSV"/>
+                                            <constraint firstItem="bFy-PH-il1" firstAttribute="leading" secondItem="0kY-nH-CFY" secondAttribute="leading" constant="20" id="4F6-wL-1yT"/>
+                                            <constraint firstItem="LGt-QD-s5E" firstAttribute="top" secondItem="bFy-PH-il1" secondAttribute="bottom" constant="20" id="6qE-as-r20"/>
+                                            <constraint firstItem="bFy-PH-il1" firstAttribute="centerY" secondItem="0kY-nH-CFY" secondAttribute="centerY" multiplier="0.85" id="KmF-hW-Xh6"/>
+                                            <constraint firstItem="LGt-QD-s5E" firstAttribute="width" secondItem="bFy-PH-il1" secondAttribute="width" id="NR9-ma-UGT"/>
+                                            <constraint firstAttribute="trailing" secondItem="bFy-PH-il1" secondAttribute="trailing" constant="20" id="Trf-ua-bSV"/>
+                                            <constraint firstItem="LGt-QD-s5E" firstAttribute="centerX" secondItem="0kY-nH-CFY" secondAttribute="centerX" id="jxm-eL-8d1"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sEx-bY-VQn" customClass="LoginButton" customModule="PokeDemo" customModuleProvider="target">
+                                        <rect key="frame" x="67" y="458" width="280.5" height="30"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="isJ-zr-Xv7"/>
                                         </constraints>
                                     </view>
                                 </subviews>
@@ -40,7 +56,10 @@
                                     <constraint firstItem="syD-FV-2dN" firstAttribute="height" secondItem="0kY-nH-CFY" secondAttribute="height" id="0yu-Q2-wtL"/>
                                     <constraint firstItem="0kY-nH-CFY" firstAttribute="centerX" secondItem="Gg4-PO-5Pf" secondAttribute="centerX" id="CUF-6S-zci"/>
                                     <constraint firstItem="syD-FV-2dN" firstAttribute="width" secondItem="0kY-nH-CFY" secondAttribute="width" id="IV4-nG-6bK"/>
+                                    <constraint firstItem="sEx-bY-VQn" firstAttribute="centerX" secondItem="Gg4-PO-5Pf" secondAttribute="centerX" id="Ihd-9M-fzu"/>
                                     <constraint firstItem="0kY-nH-CFY" firstAttribute="centerY" secondItem="Gg4-PO-5Pf" secondAttribute="centerY" id="JTe-ua-Wc6"/>
+                                    <constraint firstItem="sEx-bY-VQn" firstAttribute="top" secondItem="LGt-QD-s5E" secondAttribute="bottom" constant="28.5" id="TQF-M8-GQ3"/>
+                                    <constraint firstItem="sEx-bY-VQn" firstAttribute="width" secondItem="bFy-PH-il1" secondAttribute="width" multiplier="0.75" id="ULp-3S-e1K"/>
                                 </constraints>
                                 <viewLayoutGuide key="contentLayoutGuide" id="syD-FV-2dN"/>
                                 <viewLayoutGuide key="frameLayoutGuide" id="fdM-8v-0TF"/>
@@ -57,6 +76,12 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="loginButton" destination="sEx-bY-VQn" id="mcH-QX-VIM"/>
+                        <outlet property="mailContainerTextField" destination="bFy-PH-il1" id="5re-82-MQj"/>
+                        <outlet property="passwordContainerTextField" destination="LGt-QD-s5E" id="aWY-37-7oh"/>
+                        <outlet property="scrollView" destination="Gg4-PO-5Pf" id="JJC-Va-o6h"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
