--- a/PokeDemo/View/Home/Home.storyboard
+++ b/PokeDemo/View/Home/Home.storyboard
@@ -1,7 +1,45 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Vlk-JL-szH">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--Home View Controller-->
+        <scene sceneID="gpJ-s3-QMG">
+            <objects>
+                <viewController id="Vlk-JL-szH" customClass="HomeViewController" customModule="PokeDemo" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="KaE-k8-zJ4">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="DzW-8Y-XoM">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="Vlk-JL-szH" id="clX-ZP-lMA"/>
+                                    <outlet property="delegate" destination="Vlk-JL-szH" id="7ND-TY-vuv"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="8cw-yn-EHz" firstAttribute="bottom" secondItem="DzW-8Y-XoM" secondAttribute="bottom" id="8U1-b4-8Ao"/>
+                            <constraint firstItem="DzW-8Y-XoM" firstAttribute="top" secondItem="8cw-yn-EHz" secondAttribute="top" id="A5Q-yc-a5x"/>
+                            <constraint firstItem="8cw-yn-EHz" firstAttribute="trailing" secondItem="DzW-8Y-XoM" secondAttribute="trailing" id="ofj-2U-Psg"/>
+                            <constraint firstItem="DzW-8Y-XoM" firstAttribute="leading" secondItem="8cw-yn-EHz" secondAttribute="leading" id="ylA-S6-F3l"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="8cw-yn-EHz"/>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="DzW-8Y-XoM" id="9zx-yG-2ac"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="IMO-fc-o0h" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="110" y="135"/>
+        </scene>
+    </scenes>
 </document>
