--- a/PokeDemo/View/Login/Base.lproj/Login.storyboard
+++ b/PokeDemo/View/Login/Base.lproj/Login.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="ipad10_2" orientation="portrait" layout="fullscreen" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -12,23 +12,26 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="LoginViewController" customModule="PokeDemo" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="810" height="1080"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Gg4-PO-5Pf" customClass="ScrollKeyboardAvoiding" customModule="PokeDemo" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <rect key="frame" x="0.0" y="0.0" width="810" height="1080"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0kY-nH-CFY">
-                                        <rect key="frame" x="0.0" y="-39" width="414" height="896"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="810" height="1080"/>
                                         <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="pokeball" translatesAutoresizingMaskIntoConstraints="NO" id="FPO-uo-bSg">
+                                                <rect key="frame" x="263.5" y="-13" width="283.5" height="512"/>
+                                            </imageView>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bFy-PH-il1" customClass="ContainerTextField" customModule="PokeDemo" customModuleProvider="target">
-                                                <rect key="frame" x="20" y="358.5" width="374" height="45"/>
+                                                <rect key="frame" x="20" y="436.5" width="770" height="45"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="45" id="wgh-AM-x9z"/>
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LGt-QD-s5E" customClass="ContainerTextField" customModule="PokeDemo" customModuleProvider="target">
-                                                <rect key="frame" x="20" y="423.5" width="374" height="45"/>
+                                                <rect key="frame" x="20" y="501.5" width="770" height="45"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="45" id="7Wk-0Y-3Ak"/>
                                                 </constraints>
@@ -38,17 +41,20 @@
                                         <constraints>
                                             <constraint firstItem="bFy-PH-il1" firstAttribute="leading" secondItem="0kY-nH-CFY" secondAttribute="leading" constant="20" id="4F6-wL-1yT"/>
                                             <constraint firstItem="LGt-QD-s5E" firstAttribute="top" secondItem="bFy-PH-il1" secondAttribute="bottom" constant="20" id="6qE-as-r20"/>
+                                            <constraint firstItem="FPO-uo-bSg" firstAttribute="centerX" secondItem="0kY-nH-CFY" secondAttribute="centerX" id="IGZ-X4-Siw"/>
                                             <constraint firstItem="bFy-PH-il1" firstAttribute="centerY" secondItem="0kY-nH-CFY" secondAttribute="centerY" multiplier="0.85" id="KmF-hW-Xh6"/>
                                             <constraint firstItem="LGt-QD-s5E" firstAttribute="width" secondItem="bFy-PH-il1" secondAttribute="width" id="NR9-ma-UGT"/>
                                             <constraint firstAttribute="trailing" secondItem="bFy-PH-il1" secondAttribute="trailing" constant="20" id="Trf-ua-bSV"/>
+                                            <constraint firstItem="FPO-uo-bSg" firstAttribute="width" secondItem="0kY-nH-CFY" secondAttribute="width" multiplier="0.35" id="Wow-SL-IXv"/>
                                             <constraint firstItem="LGt-QD-s5E" firstAttribute="centerX" secondItem="0kY-nH-CFY" secondAttribute="centerX" id="jxm-eL-8d1"/>
+                                            <constraint firstItem="FPO-uo-bSg" firstAttribute="centerY" secondItem="0kY-nH-CFY" secondAttribute="centerY" multiplier="0.45" id="pCl-jN-O7M"/>
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sEx-bY-VQn" customClass="LoginButton" customModule="PokeDemo" customModuleProvider="target">
-                                        <rect key="frame" x="67" y="458" width="280.5" height="30"/>
+                                        <rect key="frame" x="116.5" y="575" width="577.5" height="50"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="30" id="isJ-zr-Xv7"/>
+                                            <constraint firstAttribute="height" constant="50" id="isJ-zr-Xv7"/>
                                         </constraints>
                                     </view>
                                 </subviews>
@@ -88,4 +94,7 @@
             <point key="canvasLocation" x="139" y="137"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="pokeball" width="512" height="512"/>
+    </resources>
 </document>
